# SimplePLC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  script.lua  settings.ini
.github/workflows/: cmake-multi-platform.yml
example/Factory IO - Scene 1/: README.md  plc_logic.lua
scripts/: active.plc  getLogic.py  getSimulation.py  readme.txt  runSimplePLC.py  settings.ini  simulation.lua  warehouse.txt  world.plc
src/: check_modbus_server.cpp  device_config.cpp  device_config.h  lua_hooks.cpp  lua_hooks.h  main.cpp  modbus_handler.cpp  modbus_handler.h  opcua_server.cpp  opcua_server.h  platform.h  plc_logic.cpp  plc_logic.h  plc_timer.cpp  plc_timer.h  server.cpp  server.h  test_client.cpp  test_modbus_maxconn.cpp  test_modbus_responsetime.cpp
